<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linear_layout_enfant_jv"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="20dp"
    android:layout_margin="20dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/nom_jeux_video"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nom_jv"
        android:textSize="40sp"
        android:fontFamily="@font/ubuntu"
        android:textAlignment="center"
        android:textColor="@color/teal_700"
        />

    <ImageView
        android:id="@+id/image_jeux_video"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/castlevania"
        android:contentDescription="@string/image_jv"
        android:adjustViewBounds="true"
        android:layout_margin="20dp"
        android:layout_gravity="center_horizontal"
        />

    <TextView
        android:id="@+id/description_jeux_video"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description_jv"
        android:textSize="25sp"
        android:fontFamily="@font/ubuntu"
        android:textAlignment="center"
        android:padding="20dp"
        android:textColor="@color/orange"
        />
    <TextView
        android:id="@+id/prix_jeux_video"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/prix_jv"
        android:textSize="30sp"
        android:fontFamily="@font/ubuntu"
        android:textAlignment="center"
        android:padding="20dp"
        android:textColor="@color/teal_200"
        />


</LinearLayout>