<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical"
    tools:context=".DetailsJeuxActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/nom_jeux_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu"
                android:padding="20dp"
                android:text="@string/titre_details"
                android:textAlignment="center"
                android:textColor="@color/orange"
                android:textSize="50sp" />

            <ImageView
                android:id="@+id/image_jeux_video_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="20dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/image_jv"
                android:src="@drawable/castlevania" />

            <TextView
                android:id="@+id/description_jeux_video_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu"
                android:padding="20dp"
                android:text="@string/description_jv"
                android:textAlignment="center"
                android:textColor="@color/orange"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/prix_jeux_video_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu"
                android:padding="20dp"
                android:text="@string/prix_jv"
                android:textAlignment="center"
                android:textColor="@color/teal_200"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn_retour_jeux"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/btn_retour_jeux"
                android:backgroundTint="@color/green_dark"
                android:padding="20dp"
                android:textSize="25sp" />

            <Button
                android:id="@+id/btn_acheter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:backgroundTint="@color/orange"
                android:text="@string/btn_acheter"
                android:textColor="@color/white"
                android:padding="20dp"
                android:textSize="25sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>